--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,60 @@
-node_modules
-dist
+# Node / package managers
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+/dist/
+/build/
+/.output/
+/.cache/
+/.turbo/
+/.vite/
+/.esbuild/
+coverage/
+
+# TypeScript
+*.tsbuildinfo
+
+# Env & secrets (never commit)
+.env
+.env.*
+!.env.example
+
+# OS junk
 .DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+Thumbs.db
+
+# IDE/editor
+.vscode/
+!.vscode/extensions.json
+!.vscode/settings.example.json
+.idea/
+*.swp
+*.swo
+
+# Drizzle/DB
+# Commit migrations, but ignore local SQLite/db artifacts if any
+*.sqlite
+*.sqlite-journal
+
+# Replit / misc
+.replit
+**/.repl/
+
+# Local scratch assets not needed in repo
+attached_assets/
+
+# Logs
+*.log
+logs/
+pids/
+*.pid
+*.seed
+
+# Lockfiles: keep exactly one if you use it (npm/yarn/pnpm). Uncomment the one you use and commit it.
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
