feat: Update project documentation and configuration
- Update README.md with comprehensive project description for EcoVision platform
- Add detailed installation instructions and quick start guide
- Include tech stack, features, and demo account information
- Update package.json with correct project name and description
- Improve .gitignore configuration for npm projects

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "rest-express",
+  "name": "ecovision-gamified-platform",
   "version": "1.0.0",
+  "description": "A gamified environmental learning platform for educational institutions",
   "type": "module",
   "license": "MIT",
   "scripts": {
