✨ Major UI/UX improvements and bug fixes
🎨 Visual Enhancements:
- Added unique background images for all 18+ pages with glassmorphic design
- Implemented transparent card overlays with backdrop-blur effects
- Enhanced quizzes page with glassmorphic styling and transparency

🔧 Authentication & Navigation:
- Fixed sign-in redirect issues - now properly navigates to profile after login
- Implemented ProtectedRoute component for role-based access control
- Enhanced authentication persistence on page refresh

🔔 Notification System:
- Fixed notification bell z-index issues using React Portal
- Notification dropdown now appears above all elements
- Improved positioning and backdrop handling

🖼️ Background Image System:
- Added 15+ unique nature/environmental background images
- Fixed broken image paths and removed problematic filenames with spaces
- Consistent visual theming across all pages

🎯 Bug Fixes:
- Resolved 404 errors for missing background images
- Fixed authentication state management
- Improved glassmorphic design consistency

--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,6 @@ pids/
 *.seed
 
 # Lockfiles: keep exactly one if you use it (npm/yarn/pnpm). Uncomment the one you use and commit it.
-# package-lock.json (keeping this one since project uses npm)
+# package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
